name: haste-perch
version: 0.1.0.8
cabal-version: >=1.10
build-type: Simple
license: GPL-3
license-file: LICENSE
maintainer: agocorona@gmail.com
homepage: https://github.com/agocorona/haste-perch
bug-reports: https://github.com/agocorona/haste-perch/issues
synopsis: Create, navigate and modify the DOM tree with composable syntax, with the haste compiler
description: see the description at the homepage.
             This version add support for the Client Monad (Module Haste.App.Perch)
category: Web
author: Alberto G. Corona
data-dir: ""
extra-source-files: README.md Main.hs Main.hs Main.html

source-repository head
    type: git
    location: http://github.com/agocorona/haste-perch

flag haste-inst
    Description:  either if it is being compiled with haste-inst or with cabal
    Default: False

library

    if flag(haste-inst)
        build-depends: base >4.0 && <5, transformers -any, haste-lib -any
        exposed: True
        buildable: True
    else
        build-depends: base >4.0 && <5, transformers -any,
                       haste-compiler >= 0.5
        exposed: True
        buildable: True
        default-language: Haskell2010
    exposed-modules: Haste.Perch Haste.App.Perch
    exposed: True
    buildable: True
    other-modules:


